--- a/demo/miniprogramIoT/pages/user-files/files.wxml
+++ b/demo/miniprogramIoT/pages/user-files/files.wxml
@@ -13,16 +13,20 @@
     </view>
   </view>
   <view wx:if="{{recordList}}" class="page-section {{logFileDetail ? 'hide' : ''}}">
-    <view>共 {{recordList.length}} 个文件，{{totalBytes}} Bytes</view>
+    <view>共 {{recordList.length}} 个文件/文件夹，{{totalBytes}} Bytes</view>
     <view wx:for="{{recordList}}" wx:key="fileName" class="record-item">
       <view>{{item.fileName}}</view>
-      <view>
+      <view wx:if="{{item.isDir}}">
+        <text class="info">目录</text>
+        <text class="right-btn" wx:if="{{!isLogDir}}" bindtap="removeDir" data-index="{{index}}">删除</text>
+      </view>
+      <view wx:else>
         <text class="info">{{item.size}}B</text>
         <text class="right-btn" wx:if="{{!isLogDir}}" bindtap="removeFile" data-index="{{index}}">删除</text>
         <text class="right-btn" wx:if="{{!isDevTool}}" bindtap="sendFile" data-index="{{index}}">发送</text>
         <text class="right-btn" wx:if="{{isDevTool}}" bindtap="saveFileInDevTool" data-index="{{index}}">保存</text>
-        <text class="right-btn" wx:if="{{item.showSave && item.isMP4}}" bindtap="saveToAlbum" data-index="{{index}}">保存到相册</text>
-        <text class="right-btn" wx:if="{{item.showSave && !item.isMP4}}" bindtap="exportToAlbum" data-index="{{index}}">导出到相册</text>
+        <text class="right-btn" wx:if="{{item.showSaveToAlbum && item.isMP4}}" bindtap="saveToAlbum" data-index="{{index}}">保存到相册</text>
+        <text class="right-btn" wx:if="{{item.showSaveToAlbum && !item.isMP4}}" bindtap="exportToAlbum" data-index="{{index}}">导出到相册</text>
         <text class="right-btn" wx:if="{{item.isLOG}}" bindtap="openLogFile" data-index="{{index}}">查看</text>
       </view>
     </view>
