--- a/demo/miniprogramIoT/pages/video/pages/xp2p-demo-ipc-playback-cloudvideo/demo.wxss
+++ b/demo/miniprogramIoT/pages/video/pages/xp2p-demo-ipc-playback-cloudvideo/demo.wxss
@@ -1,1 +1,39 @@
 @import '../../../../common.wxss';
+@import '../../../../input.wxss';
+
+.player-container {
+  box-sizing: border-box;
+  position: relative;
+  width: 100%;
+  height: 420rpx;
+  background-color: black;
+}
+
+.player-container video {
+  width: 100%;
+  height: 100%;
+}
+
+.record-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10rpx;
+}
+
+.record-item .group-button {
+  flex: 1;
+  display: flex;
+}
+
+.record-item .group-button .text {
+  display: inline-block;
+  max-width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.input-item {
+  margin-bottom: 10rpx;
+}
