--- a/demo/miniprogramIoT/pages/index/index.wxml
+++ b/demo/miniprogramIoT/pages/index/index.wxml
@@ -110,6 +110,7 @@
     <navigator url="/pages/user-files/files?name=downloads" hover-class="navigator-hover">跳转到 P2P-下载管理页</navigator>
     <navigator url="/pages/user-files/files?name=cloud" hover-class="navigator-hover">跳转到 Cloud-下载管理页</navigator>
     <navigator url="/pages/test-video/test" hover-class="navigator-hover">跳转到 Video 测试页</navigator>
+    <navigator url="/pages/video/pages/local-flv-player/player" hover-class="navigator-hover">跳转到 LocalFlvPlayer 测试页</navigator>
     <navigator url="/pages/video/pages/voip/voip" hover-class="navigator-hover">跳转到 voip 测试页面</navigator>
   </view>
 </view>
