--- a/demo/miniprogramIoT/pages/index/index.wxml
+++ b/demo/miniprogramIoT/pages/index/index.wxml
@@ -13,6 +13,10 @@
           tcpFirst="{{ tcpFirst }}"
           canToggleCrossStunTurn="{{ canToggleCrossStunTurn }}"
           crossStunTurn="{{ crossStunTurn }}"
+          stunPort="{{ stunPort }}"
+          canTogglePort="{{ canTogglePort }}"
+          useDeliveryConfig="{{ useDeliveryConfig }}"
+          canToggleUseDeliveryConfig="{{ canToggleUseDeliveryConfig }}"
           xp2pUuid="{{ xp2pUUID }}"
           xp2pState="{{ xp2pState }}"
           xp2pStateTime="{{ xp2pStateTime }}"
