--- a/demo/miniprogramIoT/pages/video/pages/xp2p-demo-ipc/demo.wxml
+++ b/demo/miniprogramIoT/pages/video/pages/xp2p-demo-ipc/demo.wxml
@@ -42,6 +42,7 @@
       muted="{{options.playerMuted}}"
       acceptPlayerEvents="{{acceptPlayerEvents}}"
       onlyp2pMap="{{onlyp2pMap}}"
+      onlyAudio="{{options.onlyAudio}}"
       showLog="{{options.playerLog}}"
       bind:playstatechagne="onPlayStateChange"
       bind:fullscreenchange="onFullScreenChange"
@@ -98,6 +99,7 @@
           deviceInfo="{{deviceInfo}}"
           voiceType="{{options.voiceType}}"
           pusherProps="{{pusherProps}}"
+          recorderProps="{{recorderProps}}"
           autoStopIfPageHide="{{autoStopVoiceIfPageHide}}"
           showLog="{{options.intercomLog}}"
           bind:voicestatechange="onVoiceStateChange"
