--- a/demo/miniprogramIoT/pages/video/pages/xp2p-intercom-call/demo.wxml
+++ b/demo/miniprogramIoT/pages/video/pages/xp2p-intercom-call/demo.wxml
@@ -20,6 +20,7 @@
       showLog="{{ showLog }}"
       showDebugInfo="{{ showDebugInfo }}"
       onlyp2pMap="{{ onlyp2pMap }}"
+      onlyAudio="{{ deviceInfo.options.onlyAudio }}"
       bind:domready="onPlayerEvent"
       bind:playerstatechange="onPlayerEvent"
       bind:streamstatechange="onPlayerEvent"
