feat(tewcall): voip 半屏窗口打开 p2p 监控 demo

--- a/demo/miniprogramIoT/pages/index/index.wxml
+++ b/demo/miniprogramIoT/pages/index/index.wxml
@@ -17,6 +17,8 @@
           canTogglePort="{{ canTogglePort }}"
           useDeliveryConfig="{{ useDeliveryConfig }}"
           canToggleUseDeliveryConfig="{{ canToggleUseDeliveryConfig }}"
+          streamCrypto="{{ streamCrypto }}"
+          canToggleStreamCrypto="{{ canToggleStreamCrypto }}"
           xp2pUuid="{{ xp2pUUID }}"
           xp2pState="{{ xp2pState }}"
           xp2pStateTime="{{ xp2pStateTime }}"
