--- a/demo/miniprogramIoT/pages/index/components/demo-basicinfo/index.wxml
+++ b/demo/miniprogramIoT/pages/index/components/demo-basicinfo/index.wxml
@@ -30,6 +30,9 @@
       <view wx:if="{{ canToggleUseDeliveryConfig }}">
         使用设备跟随: {{ useDeliveryConfig }} <text class="text-btn" bindtap="toggleUseDeliveryConfig">切换</text>
       </view>
+      <view wx:if="{{ canToggleStreamCrypto }}">
+        是否开启xp2p加密: {{ streamCrypto }} <text class="text-btn" bindtap="toggleStreamCrypto">切换</text>
+      </view>
       <view>
         uuid: <text user-select>{{ xp2pUuid }}</text>
       </view>
