--- a/demo/miniprogramIoT/pages/video/pages/xp2p-demo-ipc/components/p2p-live-player/p2p-live-player.wxml
+++ b/demo/miniprogramIoT/pages/video/pages/xp2p-demo-ipc/components/p2p-live-player/p2p-live-player.wxml
@@ -1,4 +1,5 @@
 <view class="p2p-live-player">
+  <view>是否存在 playerId ? {{ playerId ? playerId : '-' }}</view>
   <iot-p2p-player-with-mjpg
     id="{{playerId}}"
     class="{{compClass}}"
